<resources>
    <string name="app_name">Work In Ukraine</string>
    <string name="settings_messages">Оповещения</string>
    <string name="settings_sound_enable">Использовать звуковые оповещения</string>
    <string name="settings_sound_settings">Настройка звука</string>
    <string name="settings_summary_message">Звук и вибрация включены</string>
    <string name="settings_sound_dialog">Выберите настройки</string>
    <string name="settings_sound_period">Проверять наличие новых вакансий с периодом</string>
    <string name="settings_sound_period_summary">Каждые 3 часа</string>
    <string name="settings_sound_period_default">3 часа</string>
    <string name="settings_category_theme">Оформление</string>
    <string name="settings_theme">Тема оформления</string>
    <string name="settings_theme_default">Тёмная</string>
    <string name="settings_theme_dialog">Выберите тему оформления</string>
    <string name="key_sound_switcher">key_sound_switcher</string>
    <string name="key_list_preferences">key_list_preferences</string>
    <string name="key_sound_period">key_sound_period</string>
    <string name="key_settings_theme">key_settings_theme</string>
    <string name="top_star_text">Избранные вакансии</string>
    <string name="empty_list_text">К сожалению вакансии, соответствующие критериям поиска, не найдены.</string>
    <string name="downloading_started">Загрузка началась!</string>
    <string name="dialog_title">Найдено вакансий</string>
    <string name="headhuntersua">hh.ua</string>
    <string name="workua">work.ua</string>
    <string name="rabotaua">rabota.ua</string>
    <string name="jobsua">jobs.ua</string>
    <string name="worknewinfo">worknew.info</string>
    <string name="action_settings">Настройки</string>
    <string name="minimal_request_length">Минимальная длина запроса 3 символа</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_search_spinner_prompt">Выберите город поиска</string>
    <string name="dialog_search_edittext_hint">Введите ключевые слова поиска</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="dialog_delete_remove">Удалить</string>
    <string name="dialog_delete_cancel">Отмена</string>
    <string name="dialog_delete_shore">Вы уверенны, что хотите очистить список избранных вакансий?</string>
    <string name="dialog_delete_clear_toast">Список вакансий очищено!</string>
    <string name="card_view_adapter_job_added_to_favorite">Вакансия добавлена в список избранных!</string>
    <string name="card_view_adapter_job_exists_in_table">Вакансия уже существует в списке избранных!</string>
    <string name="card_view_adapter_job_removed_from_favorite">Вакансия удалена из списка избранных!</string>
    <string name="navmenu_new_search">Искать вакансии</string>
    <string name="navmenu_update">Обновить список вакансий</string>
    <string name="navmenu_favorite">Избранные вакансии</string>
    <string name="navmenu_recent">Последние вакансии</string>
    <string name="navmenu_settings">Настройки</string>
    <string name="navmenu_about">Информация о приложении</string>
    <string name="navmenu_exit">Выйти</string>
    <string name="notification_title">Поступили новые предложения работы</string>
    <string name="notification_summary">Всего найдено вакансий: </string>
    <string name="base_activity_title_favorite">Список избранных вакансий</string>
    <string name="base_activity_title_recent">Список недавних вакансий</string>
    <string name="base_activity_title_new">Список новых вакансий</string>
    <string name="base_activity_favorite_empty">Список вакансий пуст</string>
    <string name="base_activity_recent_empty">Список недавних вакансий пуст</string>
    <string name="crash_dialog_text">Произошла ошибка! Пожалуйста, отправьте отчёт для того чтобы исправить ситуацию.</string>
    <string name="crash_dialog_title"><![CDATA[Oups >|<]]></string>
    <string name="crash_dialog_comment_promt">Можете добавить свой комментарий ниже</string>
    <string name="crash_dialog_ok_toast">Благодарю!</string>
    <string name="settings_activity_title">Настройки</string>
    <string name="webview_menu_add_to_favorite">Добавить в список избранных</string>
    <string name="card_view_popup_share">Поделиться</string>
    <string name="card_view_popup_remove">Удалить</string>
    <string name="card_view_popup_add_to_favorite">Добавить в избранные</string>
    <string name="no_internet_connection">Нет доступа к интернету. Проверьте подключение и повторите попытку позже!</string>
    <string name="nav_founded_vacancies">Найдено вакансий</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_item_edit">Редактировать</string>
    <string name="search_item_remove">Удалить</string>
    <string name="search_item_blacklist">Исключить</string>
    <string name="settings_toolbar">Настройки</string>
    <string name="settings_notification">УВЕДОМЛЕНИЯ</string>
    <string name="settings_item_period">Проверять наличие новых вакансий</string>
    <string name="settings_sound_notification">Использовать звуковые оповещения</string>
    <string name="settings_vibro_notification">Использовать вибрацию</string>
    <string name="settings_dont_disturb">Не беспокоить</string>
    <string name="settings_support">ПОДДЕРЖКА</string>
    <string name="settings_send_feedback">Отправить отзыв</string>
    <string name="settings_about">О приложении</string>
    <string name="settings_cheched_on">Включено</string>
    <string name="settings_cheched_of">Выключено</string>
    <string name="time_picker_from">С</string>
    <string name="time_picker_to">До</string>
    <string name="delete_request">Удалить запрос?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>