<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single"
           android:id="@+id/first_selection">
        <item
            android:id="@+id/nav_new_request"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/navmenu_new_search" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:checkable="true"
            android:title="@string/navmenu_update"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_grade_black_24dp"
            android:checkable="true"
            android:title="@string/navmenu_favorite"/>
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_history_black_24dp"
            android:checkable="true"
            android:title="@string/navmenu_recent"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/second_section">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/navmenu_settings"/>
        <!--<item-->
            <!--android:id="@+id/nav_about"-->
            <!--android:icon="@drawable/ic_info_black_24dp"-->
            <!--android:title="@string/navmenu_about" />-->
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/navmenu_exit" />
    </group>


</menu>